# django_ecom_model

./: .gitignore  pyproject.toml
account/: admin.py  forms.py  models.py  token.py  urls.py  views.py
account/migrations/: 0001_initial.py
account/templates/account/: dashboard.html  delete-account.html  my-login.html  profile-management.html  rewards_hist.html  track-orders.html
account/templates/account/password/: password-reset-complete.html  password-reset.html
account/templates/account/registration/: email-cerification.html  register.html
account/templatetags/: rewards_tags.py
cart/: cart.py  views.py
cart/templates/cart/: cart-summary.html
ecom_model/: settings.py  urls.py
payment/: admin.py  models.py  urls.py  views.py
payment/migrations/: 0001_initial.py  0002_refundrequest_refunditem.py
payment/templates/payment/: checkout.html  guest-refund-request.html  guest-refund-status.html  payment-failed.html  payment-success.html  refund-landing.html  refund-status.html  request-refund.html
static/css/: base.css  styles.css
static/js/: app.js
store/: admin.py  models.py  urls.py  views.py
store/migrations/: 0002_product_date_uploaded_product_last_sold_date_and_more.py
store/templates/store/: base.html  brand.html  list-category.html  nav.html  product-info.html  search-results.html  search-suggestions.html
