[project]
name = "ecom-model"
version = "0.1.0"
description = "This is a mockup of an e-commerce store"
authors = [
    {name = "Mustafa Prodhan",email = "mufassagit@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0,<7.0)",
    "python-decouple (>=3.8,<4.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "django-crispy-forms (>=2.5,<3.0)",
    "crispy-bootstrap5 (>=2025.6,<2026.0)",
    "django-mathfilters (>=1.0.0,<2.0.0)",
    "django-six (>=1.0.5,<2.0.0)",
    "six (>=1.17.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
